monowar.css
/*
Original design: andreas08 (v2.0 - Jul 07, 2008) - A free xhtml/css website template by Andreas Viklund.
For more information, see http://andreasviklund.com/templates/andreas08/
*/

/* Body and tag styles */
* {
  margin: 0;
  padding: 0;
}

/* Header and navigation styles */
#container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* width: 760px; */
  width: 930px;
  height: auto;
  margin: 0 auto;
  text-align: left;
  background: #ffffff;
  color: #303030;
  box-shadow: 0 0 10px 5px #999;
  font: 14px Arial, Helvetica, Sans-Serif;
}

#header {
  display: flex;
  height: 110px;
  width: 930px;
  margin: 0 0 1px 0px;
  background: #467aa7;
  color: #ffffff;
  justify-content: space-evenly;
  align-items: center;
  /* font: 12px/19px Arial, Helvetica, Sans-Serif; */

}

#main_logo img {
  max-height: 100px;
  float: left;
  padding: 10px 20px 10px 20px;
}

#department h1 {
  background-color: inherit;
  color: #ffffff;
  /* letter-spacing: -1px; */
  font: 25px Arial,
    Helvetica,
    Sans-Serif;
  font-weight: bold;
  width: 250px;
  text-align: center;
}

#border_dept_fac {
  border-left: 2px solid white;
  height: 70px;
}

#faculty h1 {
  background-color: inherit;
  color: #ffffff;
  /* letter-spacing: -1px; */
  font: 25px Arial,
    Helvetica,
    Sans-Serif;
  font-weight: bold;
  width: 250px;
  text-align: center;

}

/* #header h2 {
  margin: 10px 0 0 40px;
  font-size: 1.4em;
  background-color: inherit;
  color: #f0f2f4;
  letter-spacing: -1px;
  font: 12px/19px Arial, Helvetica, Sans-Serif;
  font-weight: bold;
} */


body {
  margin: 0;
  padding: 0;
  font: 12px/19px Arial, Helvetica, Sans-Serif;
  line-height: 1.5em;
  text-align: center;
  color: #303030;
  background: #ddd;
}

/*body {font:76% Verdana,Tahoma,Arial,sans-serif; line-height:1.4em; text-align:center; color:#303030; background:#e8eaec}*/
a {
  color: #467aa7;
  font-weight: bold;
  text-decoration: none;
  background-color: inherit;
}

a:hover {
  color: #2a5a8a;
  text-decoration: none;
  background-color: inherit;
}

a img {
  border: none;
}

p {
  padding: 0 0 1.6em 0;
}

p form {
  margin-top: 0;
  margin-bottom: 20px;
}

/* img.left,
img.center,
img.right {
  padding: 4px;
  border: 1px solid #a0a0a0;
}

img.left {
  float: left;
  margin: 0 12px 5px 0;
}

img.center {
  display: block;
  margin: 0 auto 5px auto;
}

img.right {
  float: right;
  margin: 0 0 5px 12px;
} */

.navigation {
  height: 2.2em;
  line-height: 2.2em;
  margin: 0;
  width: auto;
  background: #578bb8;
  color: #ffffff;

}
.navigation ul {
  display: flex;
}

.navigation li {
  float: left;
  list-style-type: none;
  /* border-right: 1px solid #ffffff; */
  /* white-space: nowrap; */
  flex: auto;
  text-align: center;
}

.nav_border {
  border-left: 2px solid white;
}

.navigation li a {
  /* display: block; */
  padding: 8px 12.5px;
  font-size: 0.8em;
  font-weight: normal;
  text-transform: uppercase;
  text-decoration: none;
  background-color: inherit;
  color: #ffffff;
}

.navigation > li > a {
  height: 100%;
}

* html .navigation a {
  width: 1%;
}

.navigation .selected,
.navigation li:hover {
  background: #0a2f4f;
  color: #ffffff;
  text-decoration: none;
}

/* Content styles */
/*#content {float:left; width:530px; font-size:0.9em; padding:20px 0 0 20px;}*/
#content {
  display: flex;
  width: 530px;
  padding: 20px 0 0 20px;
  font-size: 1.1em;
  flex-direction: column;
}

#content h2 {
  display: block;
  margin: 0 0 16px 0;
  font-size: 1.7em;
  font-weight: normal;
  letter-spacing: -1px;
  color: #505050;
  background-color: inherit;
}

#content h2 a {
  font-weight: normal;
}

#content h3 {
  margin: 0 0 5px 0;
  font-size: 1.4em;
  letter-spacing: -1px;
}

#content a:hover,
#subcontent a:hover {
  text-decoration: underline;
}

#content ul,
#content ol {
  margin: 0 5px 16px 35px;
}

#content dl {
  margin: 0 5px 10px 25px;
}

#content dt {
  font-weight: bold;
  margin-bottom: 5px;
}

#content dd {
  margin: 0 0 10px 15px;
}

/* Content styles */
#contentWide {
  /* float: left; */
  width: 700px;
  padding: 20px 0 0 20px;
  font-size: 1.1em;
}

#contentWide h2 {
  /* display: block; */
  margin: 0 0 16px 0;
  font-size: 1.7em;
  font-weight: normal;
  letter-spacing: -1px;
  color: #505050;
  background-color: inherit;
}

#contentWide h2 a {
  font-weight: normal;
}

#contentWide h3 {
  margin: 0 0 5px 0;
  font-size: 1.4em;
  letter-spacing: -1px;
}

#contentWide a:hover,
#subcontent a:hover {
  text-decoration: underline;
}

#contentWide ul,
#content ol {
  margin: 0 5px 16px 35px;
}

#contentWide dl {
  margin: 0 5px 10px 25px;
}

#contentWide dt {
  font-weight: bold;
  margin-bottom: 5px;
}

#contentWide dd {
  margin: 0 0 10px 15px;
}

/* Sidebar styles */
#subcontent {
  float: right;
  width: 750px;
  padding: 20px 20px 10px 0;
  line-height: 1.4em;
  text-align: justify;
}

#subcontent h2 {
  display: block;
  margin: 0 0 15px 0;
  font-size: 1.6em;
  font-weight: normal;
  text-align: left;
  letter-spacing: -1px;
  color: #505050;
  background-color: inherit;
}

/*#subcontent p {margin:0 0 16px 0; font-size:0.9em;}*/
#subcontent p {
  margin: 0 0 16px 0;
}

/* Menublock styles */
.menublock {
  margin: 0 0 20px 8px;
  font-size: 0.9em;
}

.menublock li {
  list-style: none;
  display: block;
  padding: 2px;
  margin-bottom: 2px;
}

.menublock li a {
  font-weight: bold;
  text-decoration: none;
}

.menublock li a:hover {
  text-decoration: none;
}

.menublock li ul {
  margin: 3px 0 3px 15px;
  font-size: 1em;
  font-weight: normal;
}

.menublock li ul li {
  margin-bottom: 0;
}

.menublock li ul a {
  font-weight: normal;
}

/* Searchbar styles */
#searchbar {
  margin: 0 0 20px 0;
}

#searchbar form fieldset {
  margin-left: 10px;
  border: 0 solid;
}

#searchbar #s {
  height: 1.2em;
  width: 110px;
  margin: 0 5px 0 0;
  border: 1px solid #a0a0a0;
}

#searchbar #searchbutton {
  width: auto;
  padding: 0 1px;
  border: 1px solid #808080;
  font-size: 0.9em;
  text-align: center;
}

/* Footer styles */
#footer {
  margin-top: 10px;
  clear: both;
  width: auto;
  height: 200px;
  font-size: 0.9em;

  /* color: #f0f0f0; */
  /* background: #467aa7; */
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

#footer p {
  padding: 0;
  margin: 0;
  text-align: center;
}

#footer a {
  /* color: #f0f0f0; */
  background-color: inherit;
  font-weight: bold;
}

#footer a:hover {
  color: #ffffff;
  background-color: inherit;
  text-decoration: underline;
}

/* Misc classes and styles */
.splitcontentleft {
  float: left;
  width: 48%;
}

.splitcontentright {
  float: right;
  width: 48%;
}

.clear {
  clear: both;
}

.small {
  font-size: 0.9em;
}

.hide {
  display: none;
}

.textcenter {
  text-align: center;
}

.textright {
  text-align: right;
}

.important {
  color: #f02025;
  background-color: inherit;
  font-weight: bold;
}

.box {
  margin: 0 0 20px 0;
  padding: 10px;
  border: 0px solid #c0c0c0;
  background-color: #fafbfc;
  color: #505050;
  line-height: 1.5em;
}

.bio {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

#profile_img {
  margin: 20px 0 20px 20px;
  width: 200px;
}

.bio > div {
  width: 290px;
  text-align: flex;
  line-height: 15px;
  font-size: 15px;
}

#affiliation {
  width: 350px;
}

#affiliation > li {
  padding: 0 0 5px 0;
}

#external_links > li {
  padding: 0 0 5px 0;
}

.contents {
  display: flex;
  height: auto;
  /* flex-wrap: wrap; */
  /* overflow: auto; */
  flex-direction: column;

}

.contents>div {

  width: auto;
  margin: 50px 50px 0 50px;
  text-align: justify;
  text-justify: inter-word;
  line-height: 20px;

  font-size: 1.1em;
}

h3.content_separation {
  font-size: 20px;
  padding-bottom: 5px;
  flex-grow: 1;
  margin: 30px 50px -25px 50px;
  border-style: solid;
  border-width: 0 0 1px 0;
  color: #666;
  border-color: #aaa;;

}

#recent_news > ul {
  padding-left: 50px;
}
#recent_news > ul > li {
  padding: 0 0 5px 0;
}

#alumni-worked {
  height: 150px;
  display: flex;
  justify-content: center;
  align-items: center;
}
#alumni-worked > a {
  margin: -10px 15px 0px 15px;
}

#funded-by {
  height: 240px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

#funded-by > div {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.profile_sections > ul{
  margin-left: 50px;
}
.profile_sections > ul > li{
  padding: 0 0 5px 0;
}

#profile_experience {
  padding-left: 50px;
}

#profile-conference-section {
  padding-left: 50px;
}

#profile-last-section {
  padding-bottom: 25px;
}

.profile_sections > ol{
  margin-left: 30px;
}
.profile_sections > ol > li{
  padding: 0 0 5px 0;
}

#contacts-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.quotes {
  text-align: center;
  margin: 20px 50px 20px 50px;
  font-style: italic;
  font-weight: bold;
}

